; ModuleID = '/home/carl/AnghaBench/jq/src/extr_util.c_jq_util_input_get_current_filename.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_util.c_jq_util_input_get_current_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@jq_util_input_next_input_cb = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"Unknown input filename\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jq_util_input_get_current_filename(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_2__*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i64 0, i64* %4, align 8
  store i8* null, i8** %5, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @jq_get_input_cb(i32* %8, i64* %4, i8** %5)
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @jq_util_input_next_input_cb, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = call i32 @jv_string(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 @jv_invalid_with_msg(i32 %14)
  store i32 %15, i32* %2, align 4
  br label %24

16:                                               ; preds = %1
  %17 = load i8*, i8** %5, align 8
  %18 = bitcast i8* %17 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %18, %struct.TYPE_2__** %6, align 8
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @jv_copy(i32 %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %16, %13
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @jq_get_input_cb(i32*, i64*, i8**) #1

declare dso_local i32 @jv_invalid_with_msg(i32) #1

declare dso_local i32 @jv_string(i8*) #1

declare dso_local i32 @jv_copy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
